--- a/web/app/themes/sleepmaker/static/src/sass/blocks/all.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/all.sass
@@ -28,6 +28,9 @@
 @import category-card/all
 @import stuff/all
 @import size-guide/all
+@import contacts-sidebar
+@import accordion
+@import find-a-store/all
 
 @import form/all
 // @import ui/all
