--- a/web/app/themes/sleepmaker/static/src/sass/blocks/button.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/button.sass
@@ -73,6 +73,9 @@
 	letter-spacing: 0.43px
 	// text-transform: uppercase
 	color: $main
+	+r(768)
+		font-size: 16px
+		letter-spacing: 0.34px
 	&:hover
 		text-decoration: none
 
