--- a/web/app/themes/sleepmaker/static/src/sass/blocks/form/form.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/form/form.sass
@@ -3,4 +3,14 @@
 
 .form-page
     // padding: 0 14px
-    margin-top: 30px
+    margin-top: 50px
+
+.form-devider
+	border: none
+	width: 100%
+	height: 1px
+	padding: 0
+	margin: 0
+	background: $main
+	opacity: 0.1
+	margin: 60px auto -20px
