--- a/web/app/themes/sleepmaker/static/src/templates/blocks/mixins.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/blocks/mixins.pug
@@ -14,6 +14,9 @@ include wide-decor/mixins
 include category-card/mixins
 include stuff/mixins
 include size-guide/mixins
+include contacts-sidebar
+include accordion
+include find-a-store/mixins
 
 include modal/mixins
 include menu-mob/mixins
