--- a/web/app/themes/sleepmaker/static/src/templates/pages/bedding/index.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/pages/bedding/index.pug
@@ -41,3 +41,6 @@ block content
                             .stuff-card-tile
                                 - for (i = 0; i < 3; i++)
                                     +stuff-card(beddingCard)
+        +wide-decor({bg:'footer',bttns:['Find a store near you','View latest deals']})
+            img.wide-decor__logo(src="/img/wide-logo.png", alt="logo")
+            h2.wide-decor__title-bottom Make your own dream world.
