--- a/web/app/themes/sleepmaker/static/src/templates/pages/promotions-bonus/index.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/pages/promotions-bonus/index.pug
@@ -109,3 +109,16 @@ block content
                                 .input-submit
                                     button.bttn(type="submit") Submit
                     aside.page-grid__sidebar
+                        +contacts-sidebar
+            .wrap-in
+                .page-grid
+                    section.page-grid__main
+                        .content
+                            h1 Bonus Luxury Sheet Set  
+                            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consectetur odio et mauris lobortis, blandit tincidunt est lacinia. Proin vehicula, purus ut consequat hendrerit, eros quam facilisis nisi, non tincidunt diam nisi ac magna. Quisque ac consequat augue. Curabitur finibus volutpat pulvinar.
+                        a.link-top(href="#") Go back to homepage
+                    aside.page-grid__sidebar
+                        +contacts-sidebar
+        +wide-decor({bg:'footer',bttns:['Find a store near you','View latest deals']})
+            img.wide-decor__logo(src="/img/wide-logo.png", alt="logo")
+            h2.wide-decor__title-bottom Make your own dream world.
