--- a/web/app/themes/sleepmaker/static/src/templates/pages/shopping-tips/index.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/pages/shopping-tips/index.pug
@@ -9,4 +9,21 @@ block content
             .wrap-in
                 .page-grid
                     section.page-grid__main
+                        .content
+                            h1 Shopping Tips 
+                            p At SleepMaker we believe your bed is your own dream world. It’s a place to retreat, relax, snuggle down & escape. It’s a place where you can enjoy peaceful moments of me time and share those good times together. It’s time to celebrate the simple pleasures in life.
+                            h3 But why?
+                            p To create your own dream world you need more than just a divine mattress. It is about all the elements of your bed working together to deliver that magical feeling, the moment you slip under the sheets at night.
+                            p When buying a new mattress, it is important to review your base, pillow, protectors and duvet as all these elements will affect the performance of your mattress. Your Base is the support for your mattress. Your base will affect airflow and roll together. If not supported correctly your mattress will feel differently at home compared to in store and will not experience the optimum benefits from your mattress. 
+                            h3 Pillow
+                            p The height and type of your pillow will affect your spinal alignment. If your new bed is softer or firmer than your previous mattress, the change will affect your spinal alignment if you keep the same pillow. We recommend that you review your pillow at the time you pick out your new mattress to assist in spinal alignment whilst you sleep.
+                            h3 Protector
+                            p You made an investment with the purchase of your new mattress so it makes sense to not only protect that investment, but also compliment it. Sitting between you and your mattress the right protector improves the feel and the breathability of the mattress.
+                            h3 Duvet
+                            p Lying over you, the right duvet will keep you at the right temperature and will make your bed more hygienic, as well as looking great. It's also worth noting that if your mattress is higher than your previous mattress you may want to increase the size of your duvet, up a size from the mattress, so it fully covers the mattress and ensures your bed looks as good as it feels.
+                            p All our SleepMaker bases, pillows, protectors and duvets have been specifically designed to complement our mattress ranges so you are safe in the knowledge that all the elements will work together, to deliver pure delight day after day.
                     aside.page-grid__sidebar
+                        +contacts-sidebar
+        +wide-decor({bg:'footer',bttns:['Find a store near you','View latest deals']})
+            img.wide-decor__logo(src="/img/wide-logo.png", alt="logo")
+            h2.wide-decor__title-bottom Make your own dream world.
