--- a/web/app/themes/sleepmaker/static/src/templates/pages/size-guide/index.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/pages/size-guide/index.pug
@@ -70,3 +70,6 @@ block content
                                     h3 WHICH SIZE?
                                     p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate vel ex id ultricies. Nam gravida risus non erat feugiat dapibus. Nunc rhoncus ut enim sit amet tempus. In lobortis justo tempus consequat mollis. Praesent rhoncus dapibus sagittis. Vestibulum sed fermentum nisl, at venenatis lacus.
                                 a.link-top(href="#") Take the quiz
+        +wide-decor({bg:'footer',bttns:['Find a store near you','View latest deals']})
+            img.wide-decor__logo(src="/img/wide-logo.png", alt="logo")
+            h2.wide-decor__title-bottom Make your own dream world.
