--- a/web/app/themes/sleepmaker/static/src/sass/_base.scss
+++ b/web/app/themes/sleepmaker/static/src/sass/_base.scss
@@ -27,6 +27,8 @@ html {
 	// 	height: 100%;
 	// 	background: url(../img/bg.jpg) center/cover no-repeat fixed;
 	// }
+	display: flex;
+	flex-flow: column nowrap;
 }
 
 .swiper-lazy {
