--- a/web/app/themes/sleepmaker/static/src/sass/blocks/footer/footer-rights.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/footer/footer-rights.sass
@@ -2,8 +2,9 @@
     color: $main
     line-height: calc(14/11)
     text-align: right
-    font-size: 12px
-    font-weight: 400
-    letter-spacing: 0.32px
-    line-height: 14px
     white-space: nowrap
+    p
+        font-size: 12px
+        font-weight: 400
+        letter-spacing: 0.32px
+        line-height: 14px
