--- a/web/app/themes/sleepmaker/static/src/sass/blocks/form/input-item.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/form/input-item.sass
@@ -6,15 +6,16 @@
     position: relative
     margin-bottom: 20px
     overflow: hidden
+    width: 100%
     +rm(651)
         margin-left: 8px
         margin-right: 8px
     &.w50
-        width: 100%
         +rm(651)
             width: calc(50% - 16px)
     &.w100
-        width: calc(100% - 16px)
+        +rm(651)
+            width: calc(100% - 16px)
     &--select
         &::after
             content: ''
