--- a/web/app/themes/sleepmaker/static/src/sass/blocks/main.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/main.sass
@@ -48,16 +48,6 @@ svg
 	opacity: 0.5
 	margin: 60px auto 40px
 
-.form-devider
-	border: none
-	width: 100%
-	height: 1px
-	padding: 0
-	margin: 0
-	background: $main
-	opacity: 0.1
-	margin: 60px auto 40px
-
 .bg-gray
 	background: rgba($main, .05)
 
@@ -100,17 +90,20 @@ svg
 	display: flex
 	flex-flow: row wrap
 	&__content
-		width: 40%
+		width: 41%
 		+r(768)
 			width: 100%
 	&__main
 		flex-grow: 1
-		width: 60%
+		width: 59%
 		+r(768)
 			width: 100%
 			padding-top: 50px
 	&__sidebar
 		width: 32%
+		+r(1024)
+			width: 100%
+			padding-top: 50px
 
 
 .show-desktop
