--- a/web/app/themes/sleepmaker/static/src/sass/blocks/typography.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/typography.sass
@@ -39,7 +39,10 @@ p
         margin-bottom: 30px
     h3
         margin-top: 40px
-        margin-bottom: 30px
+        margin-bottom: 20px
+        +r(768)
+            margin-top: 25px
+            margin-bottom: 10px
     h4
         margin-top: 25px
         margin-bottom: 15px
