--- a/web/app/themes/sleepmaker/static/src/templates/pages/category/index.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/pages/category/index.pug
@@ -61,3 +61,7 @@ block content
                     .long-card__title REGISTER YOUR WARRANTY
                     p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate vel ex id ultricies. Nam gravida risus non erat feugiat dapibus. Nunc rhoncus ut enim sit amet tempus. In lobortis justo tempus consequat mollis. Praesent rhoncus dapibus sagittis.
                     a.bttn.bttn--inverse(href="#") Find out more
+                    
+        +wide-decor({bg:'footer',bttns:['Find a store near you','View latest deals']})
+            img.wide-decor__logo(src="/img/wide-logo.png", alt="logo")
+            h2.wide-decor__title-bottom Make your own dream world.
