--- a/web/app/themes/sleepmaker/static/src/templates/pages/register-warranty/index.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/pages/register-warranty/index.pug
@@ -74,3 +74,17 @@ block content
                                 .input-submit
                                     button.bttn(type="submit") Submit
                     aside.page-grid__sidebar
+                        +contacts-sidebar
+            .wrap-in
+                .page-grid
+                    section.page-grid__main
+                        .content
+                            h1 Success, Your Registration Has Been Submitted
+                            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate vel ex id ultricies. Nam gravida risus non erat feugiat dapibus. Nunc rhoncus ut enim sit amet tempus. In lobortis justo tempus consequat mollis. Praesent rhoncus dapibus sagittis. Vestibulum sed fermentum nisl, at venenatis lacus. Vivamus quis leo at nisl commodo gravida. Integer et arcu leo. Integer est leo, ullamcorper id tristique vel, dignissim et velit. Aliquam felis nisl, blandit non lectus eu, luctus. 
+                            p Commodo orci. Nam ipsum ex, dignissim nec ipsum quis, finibus malesuada tortor. Aliquam erat volutpat. Fusce sodales nunc id sem dictum, nec semper justo dapibus.
+                        a.link-top(href="#") Back to product page
+                    aside.page-grid__sidebar
+                        +contacts-sidebar
+        +wide-decor({bg:'footer',bttns:['Find a store near you','View latest deals']})
+            img.wide-decor__logo(src="/img/wide-logo.png", alt="logo")
+            h2.wide-decor__title-bottom Make your own dream world.
