--- a/web/app/themes/sleepmaker/static/src/sass/_props.scss
+++ b/web/app/themes/sleepmaker/static/src/sass/_props.scss
@@ -21,3 +21,6 @@ $accent: $red;
 
 $f1: 'Calibre', 'Roboto', 'Helvetica', 'Arial', sans-serif;
 $f2: 'Newzald', 'Georgia', 'Times New Roman', serif;
+
+$max-content-width: 1200px;
+$scroll-width: calc(100vw - 100%);
