--- a/web/app/themes/sleepmaker/static/src/sass/blocks/all.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/all.sass
@@ -31,6 +31,10 @@
 @import contacts-sidebar
 @import accordion
 @import find-a-store/all
+@import technologies/all
+@import video
+@import tabs
+@import product/all
 
 @import form/all
 // @import ui/all
