--- a/web/app/themes/sleepmaker/static/src/sass/blocks/menu-mob/all.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/menu-mob/all.sass
@@ -1,5 +1,6 @@
 @import menu-mob
-@import menu-mob-button-open
-@import menu-mob-header
-@import menu-mob-button-close
+// @import menu-mob-button-open
+// @import menu-mob-header
+// @import menu-mob-button-close
 @import menu-mob-nav
+@import menu-mob-lvl
