--- a/web/app/themes/sleepmaker/static/src/templates/blocks/mixins.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/blocks/mixins.pug
@@ -17,6 +17,8 @@ include size-guide/mixins
 include contacts-sidebar
 include accordion
 include find-a-store/mixins
+include technologies/mixins
+include product/mixins
 
 include modal/mixins
 include menu-mob/mixins
