--- a/web/app/themes/sleepmaker/static/src/templates/pages/bedding/index.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/pages/bedding/index.pug
@@ -26,7 +26,7 @@ block content
             .wrap-in
                 .page-grid
                     aside.page-grid__content
-                        .stuff-sidebar
+                        .content-sidebar
                             .content
                                 h1 BEDDING AND ACCESSORIES
                                 p For more than 80 years, Serta have invested in the highest quality and most innovative features to ensure that every mattress delivers superior comfort and support.   
@@ -37,7 +37,7 @@ block content
                                     each filter in filters
                                         +filter(filter)
                     section.page-grid__main
-                        .stuff-card-wrap
+                        .content-restriction
                             .stuff-card-tile
                                 - for (i = 0; i < 3; i++)
                                     +stuff-card(beddingCard)
