--- a/web/app/themes/sleepmaker/static/src/templates/pages/promotions/index.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/pages/promotions/index.pug
@@ -40,7 +40,7 @@ block content
                                 each filter in filters
                                     +filter(filter)
                     section.page-grid__main
-                        .stuff-card-wrap
+                        .content-restriction
                             +stuff-banner
                             .stuff-card-tile
                                 - for (i = 0; i < 4; i++)
