--- a/web/app/themes/sleepmaker/static/src/sass/blocks/menu-mob/menu-mob-nav.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/menu-mob/menu-mob-nav.sass
@@ -1,21 +1,35 @@
 .menu-mob-nav
 	&__list
-		padding: 12px 0
+		// padding: 12px 0
 
 	&__list-item
+		display: flex
+		flex-flow: row nowrap
+		align-items: center
+		justify-content: space-between
+		margin-bottom: 10px
 	&__link
 		display: block
-		padding: 8px 0
-		font-family: Arial, Helvetica, sans-serif
-		font-size: 15px
-		line-height: 1.5em
-		font-weight: 500
-		text-transform: uppercase
-		letter-spacing: 1px
+		padding: 6px 0
+		max-width: 190px		
 		text-decoration: none
-		color: $accent
+		color: $white
 		transition: color 0.3s
-
-		+notouch
-			&:hover
-				color: mix($accent, $text-color)
+		font-family: $f1
+		line-height: 1.2
+		font-size: 19px
+		font-weight: 400
+		letter-spacing: 1.19px
+		&--begin
+			font-family: $f2
+			font-size: 22px
+			font-weight: 700
+			letter-spacing: -0.42px
+			line-height: calc(29/22)
+	&__icon
+		display: inline-block
+		font-size: 0
+		width: 8px
+		height: 12px
+		margin-left: 10px
+		transform: scaleX(-1)
