--- a/web/app/themes/sleepmaker/static/src/sass/blocks/menu-mob/menu-mob.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/menu-mob/menu-mob.sass
@@ -3,7 +3,8 @@
 
 	z-index: 30
 	display: flex
-	justify-content: flex-end
+	// justify-content: flex-end
+	justify-content: flex-start
 	position: fixed
 	top: 0
 	left: 0
@@ -13,7 +14,7 @@
 	box-sizing: border-box
 
 	&:not(.is-hidden)
-		z-index: 5
+		z-index: 3
 		visibility: visible
 
 	&.is-hidden
@@ -26,12 +27,12 @@
 
 		#{$THIS}
 			&__inner
-				transform: translate3d(100%, 0, 0)
+				transform: translate3d(-100%, 0, 0)
 				transition: transform 0.3s 0.2s
 
 			&__body
 				opacity: 0
-				transform: translate3d(0, -24px, 0)
+				transform: translate3d(-10px, 0, 0)
 				transition: transform 0.2s ease-out, opacity 0.2s
 
 	&.is-visible
@@ -57,7 +58,7 @@
 		right: 0
 		bottom: 0
 		opacity: 0.7
-		background: $text-color
+		background: rgba($main, .8)
 		pointer-events: none
 
 	&__inner
@@ -65,12 +66,17 @@
 		flex-direction: column
 		position: absolute
 		top: 0
-		right: 0
+		left: 0
 		bottom: 0
 		width: 100%
 		max-width: 495px
-		background-color: #fff
+		// background-color: #fff
+		background-color: $white
 		box-shadow: 0px 4px 20px rgba($text-color, 0.2)
+		padding-top: 55px
+		padding-left: 16px
+		padding-right: 20px
+		padding-bottom: 40px
 
 	&__header
 		flex-shrink: 0
@@ -82,17 +88,35 @@
 		justify-content: flex-start
 		flex-grow: 1
 		position: relative
-		padding: 48px 60px
+		padding: 10px 0 25px 0
 		overflow-y: auto
 		overflow-x: hidden
-		background-color: #fff
+		// background-color: #fff
 		will-change: transform
 
-		+r(640)
-			padding: 48px 32px
-
-		+r(480)
-			padding: 48px 8px
-
 	&__nav
-		margin: 0 0 32px
+		opacity: 1
+		transition: opacity .2s
+		.lvl-active &
+			opacity: 0
+		// margin: 0 0 32px
+		
+	&__bottom-btn
+		margin-top: 25px
+		width: 100%
+	
+	&__lvl
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		background-color: $white
+		opacity: 0
+		visibility: hidden
+		pointer-events: none
+		transition: opacity .3s
+		.lvl-active &
+			opacity: 1
+			visibility: visible
+			pointer-events: all
