--- a/web/app/themes/sleepmaker/static/src/templates/pages/category/index.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/pages/category/index.pug
@@ -44,23 +44,24 @@ block content
                         +category-card(category)
         hr.devider
         .container
-            .long-card-wrap
-                +long-card({
-                    img: 'long-img-1',
-                    bg: '#002e5d',
-                    color: '#ffffff'
-                })
-                    .long-card__title TRY OUR SLEEPMAKER SLEEP SELECTOR 
-                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate vel ex id ultricies. Nam gravida risus non erat feugiat dapibus. Nunc rhoncus ut enim sit amet tempus. In lobortis justo tempus consequat mollis. Praesent rhoncus dapibus sagittis.
-                    a.bttn.bttn--inverse(href="#") Find out more
-                +long-card({
-                    img: 'long-img-2',
-                    bg: '#002e5d',
-                    color: '#ffffff'
-                })
-                    .long-card__title REGISTER YOUR WARRANTY
-                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate vel ex id ultricies. Nam gravida risus non erat feugiat dapibus. Nunc rhoncus ut enim sit amet tempus. In lobortis justo tempus consequat mollis. Praesent rhoncus dapibus sagittis.
-                    a.bttn.bttn--inverse(href="#") Find out more
+            .wrap-in
+                .long-card-wrap
+                    +long-card({
+                        img: 'long-img-1',
+                        bg: '#002e5d',
+                        color: '#ffffff'
+                    })
+                        .long-card__title TRY OUR SLEEPMAKER SLEEP SELECTOR 
+                        p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate vel ex id ultricies. Nam gravida risus non erat feugiat dapibus. Nunc rhoncus ut enim sit amet tempus. In lobortis justo tempus consequat mollis. Praesent rhoncus dapibus sagittis.
+                        a.bttn.bttn--inverse(href="#") Find out more
+                    +long-card({
+                        img: 'long-img-2',
+                        bg: '#002e5d',
+                        color: '#ffffff'
+                    })
+                        .long-card__title REGISTER YOUR WARRANTY
+                        p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate vel ex id ultricies. Nam gravida risus non erat feugiat dapibus. Nunc rhoncus ut enim sit amet tempus. In lobortis justo tempus consequat mollis. Praesent rhoncus dapibus sagittis.
+                        a.bttn.bttn--inverse(href="#") Find out more
                     
         +wide-decor({bg:'footer',bttns:['Find a store near you','View latest deals']})
             img.wide-decor__logo(src="/img/wide-logo.png", alt="logo")
