--- a/web/app/themes/sleepmaker/static/src/templates/blocks/header/header-nav.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/blocks/header/header-nav.pug
@@ -15,6 +15,11 @@
             name: 'Buying Guide',
             list: false
         },
+        {
+            link: '#',
+            name: 'Bedding and Accesories',
+            list: false
+        },
     ]
 mixin header-nav
     .header__nav
