--- a/web/app/themes/sleepmaker/static/src/sass/blocks/header/header-find.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/header/header-find.sass
@@ -3,12 +3,13 @@
     &__button
         padding: 11px 20px
         width: 100%
-        font-size: 19px
+        font-size: 16px
+        letter-spacing: 0.3px
         font-weight: 400
-        letter-spacing: 1.19px
         line-height: 1
-        +r(1200)
-            font-size: 16px
+        +rm(1800)
+            letter-spacing: 1.19px
+            font-size: 19px
         +r(1024)
             display: none
     &__pin
