--- a/web/app/themes/sleepmaker/static/src/sass/blocks/header/header-nav.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/header/header-nav.sass
@@ -6,9 +6,9 @@
     &__item
         position: relative
         &:not(:last-child)
-            margin-right: 35px
-            +r(1200)
-                margin-right: 15px
+            margin-right: 15px
+            +rm(1800)
+                margin-right: 35px
         &--drop
             &::after
                 content: ''
@@ -40,15 +40,16 @@
     &__link
         display: inline-block
         padding: 3px
-        font-size: 19px
+        font-size: 16px
+        letter-spacing: 0.3px
         font-weight: 400
-        letter-spacing: 1.19px
         line-height: calc(30/19)
         color: $main
         white-space: nowrap
         text-decoration: none
-        +r(1200)
-            font-size: 16px
+        +rm(1800)
+            letter-spacing: 1.19px
+            font-size: 19px
     &__drop
         position: absolute
         top: 100%
