--- a/web/app/themes/sleepmaker/static/src/sass/blocks/header/header-support.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/header/header-support.sass
@@ -3,12 +3,13 @@
     +r(1024)
         display: none
     &__link
-        font-size: 19px
         font-weight: 400
-        letter-spacing: 1.19px
+        font-size: 16px
+        letter-spacing: 0.3px
         line-height: calc(30/19)
         text-decoration: none
         padding: 3px
         color: $main
-        +r(1200)
-            font-size: 16px
+        +rm(1800)
+            letter-spacing: 1.19px
+            font-size: 19px
