--- a/web/app/themes/sleepmaker/static/src/sass/blocks/header/header.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/header/header.sass
@@ -44,8 +44,6 @@
             width: 25%
     &__nav
         margin-right: 15px
-        +rm(1201)
-            align-self: flex-start
         +r(1200)
             display: none
     &__find
@@ -54,8 +52,8 @@
         flex-flow: row nowrap
         align-items: center
         +rm(1351)
-            width: 36%
-            max-width: 340px
+        //    width: 36%
+        //    max-width: 340px
         //     max-width: 230px
         //     width: 10%
     &__burger
