--- a/web/app/themes/sleepmaker/static/src/sass/blocks/product/product-additionally.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/product/product-additionally.sass
@@ -2,6 +2,7 @@
     display: flex
     flex-flow: row wrap
     &__aside
+        margin-bottom: 15px
         width: 100%
         &:first-child
             padding-right: 20px
