--- a/web/app/themes/sleepmaker/static/src/sass/blocks/product/product-features.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/product/product-features.sass
@@ -8,6 +8,8 @@
         margin-top: 5px
     &__desc
         padding-left: 15px
+        &.no-padding
+            padding-left: 0
         p
             line-height: 1.35
         p + p
