--- a/web/app/themes/sleepmaker/static/src/sass/blocks/contacts-sidebar.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/contacts-sidebar.sass
@@ -48,10 +48,12 @@
                 display: inline-block
                 max-width: 100%
                 max-height: 100%
+                width: 18px
+                height: 18px
     &__address
         margin-top: 24px
         margin-bottom: 10px
-        font-size: 14px
+        font-size: 16px
         li + li
             margin-top: 3px
     & + .contacts
