--- a/web/app/themes/sleepmaker/static/src/sass/blocks/find-a-store/shop-card.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/find-a-store/shop-card.sass
@@ -46,6 +46,10 @@
                 font-size: 14px
             &:hover
                 text-decoration: none
+
+            a
+                &:hover
+                    text-decoration: none
     &__site,
     &__map,
     &__offers
@@ -118,7 +122,7 @@
     &__body
         overflow-y: auto
         height: calc(100% - 50px)
-        padding-right: 3px
+        padding-right: 10px
         &::-webkit-scrollbar
             width: 8px
         /* Track */
