--- a/web/app/themes/sleepmaker/static/src/sass/blocks/wide-decor/wide-decor.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/wide-decor/wide-decor.sass
@@ -45,6 +45,8 @@
             font-size: 56px
             letter-spacing: 0.14px
             line-height: 0.7
+            text-transform: none
+            margin-top: 15px
             +r(1024)
                 font-size: 50px
                 letter-spacing: 0.13px
