--- a/web/app/themes/sleepmaker/style.css
+++ b/web/app/themes/sleepmaker/style.css
@@ -108,19 +108,20 @@ Version: 1.0.0
     margin: 0;
     width: 100%;
     height: 100%;
-    font-size: 14px;
+    font-size: 15px;
     line-height: 18px;
     letter-spacing: 1px;
-    color: #00263e;
+    color: #002e5d;
     padding: 15px;
     background: #fff;
     resize: none;
     box-sizing: border-box;
     display: block;
     border-radius: 2px;
-    border: 1px solid #7389a4;
+    border: 1px solid rgba(0,46,93,.33);
     position: relative;
     -webkit-appearance: none;
+    opacity: 0.7;
 }
 
 .form-scale .gform_wrapper .gform_body .ginput_container_select{
@@ -212,11 +213,6 @@ Version: 1.0.0
     flex-direction: column;
 }
 
-.form-scale .gform_wrapper .gform_body .gfield{
-    display: flex;
-    flex-direction: column;
-}
-
 .form-scale .gform_wrapper .gform_body .gfield .ginput_container{
     order: 2;
 }
@@ -233,29 +229,31 @@ Version: 1.0.0
 }
 
 .form-scale .gform_wrapper .gform_footer input[type='submit']{
-    color: #00263e;
-    border: 1px solid #00263e;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     position: relative;
     z-index: 1;
-    padding: 15px 30px;
+    padding: 15px;
     cursor: pointer;
     text-align: center;
     font-weight: 400;
-    line-height: 1;
-    font-size: 14px;
+    line-height: 1.1;
+    font-size: 16px;
     text-decoration: none;
     white-space: nowrap;
-    letter-spacing: 1px;
+    letter-spacing: .4px;
     box-sizing: border-box;
     transition: all .3s;
     pointer-events: auto;
+    color: #002e5d;
+    border: 1px solid #002e5d;
+    min-width: 210px;
+    overflow: hidden;
 }
 
 .form-scale .gform_wrapper .gform_footer input[type='submit']:after{
-    background: #00263e;
+    background: #002e5d;
     content: "";
     display: block;
     width: 100%;
@@ -271,7 +269,7 @@ Version: 1.0.0
 
 .form-scale .gform_wrapper .gform_footer input[type='submit']:hover{
     color: #fff;
-    background: #00263e;
+    background: #002e5d;
 }
 
 .form-scale .gform_wrapper .gfield_chainedselect{
@@ -380,16 +378,7 @@ Version: 1.0.0
     padding-top: 0 !important;
 }
 
-.page-template-contactUsPage .gform_wrapper.gform_validation_error .gform_body ul li.gfield.gfield_error:not(.gf_left_half):not(.gf_right_half):nth-child(1),
-.page-template-contactUsPage .gform_wrapper.gform_validation_error .gform_body ul li.gfield.gfield_error:not(.gf_left_half):not(.gf_right_half):nth-child(2){
-    max-width: 50% !important;
-}
-
-.page-template-contactUsPage .gform_wrapper.gform_validation_error .gform_body ul li.gfield.gfield_error:not(.gf_left_half):not(.gf_right_half){
-    width: 100%;
-    max-width: 100% !important;
-}
-
+.page-template-contactUsPage .gform_wrapper.gform_validation_error .top_label select.medium,
 .page-template-contactUsPage .top_label div.ginput_complex.ginput_container.gf_name_has_1,
 .page-template-contactUsPage .top_label div.ginput_complex.ginput_container.gf_name_has_2,
 .page-template-contactUsPage .top_label div.ginput_complex.ginput_container.gf_name_has_3{
@@ -435,12 +424,12 @@ Version: 1.0.0
 }
 
 input::-moz-placeholder, textarea::-moz-placeholder, select::-moz-placeholder{
-    color: #00263e;
-    opacity: 1;
+    color: #002e5d;
+    opacity: 0.5;
 }
 
 input::placeholder, textarea::placeholder, select::placeholder{
-    color: #00263e;
+    color: #002e5d;
     opacity: 1;
 }
 
@@ -460,16 +449,29 @@ input::placeholder, textarea::placeholder, select::placeholder{
     transform: translateY(-50%);
 }
 
-@media (max-width: 650px) {
 
-    .gform_wrapper .ginput_container span:not(.ginput_price){
-        margin-bottom: 0 !important;
+.page-template-contactUsPage .gform_wrapper.gform_validation_error .gform_body ul li.gfield.gfield_error:not(.gf_left_half):not(.gf_right_half):nth-child(1),
+.page-template-contactUsPage .gform_wrapper.gform_validation_error .gform_body ul li.gfield.gfield_error:not(.gf_left_half):not(.gf_right_half):nth-child(2),
+.page-template-contactUsPage .gform_wrapper.gform_validation_error .gform_body ul li.gfield.gfield_error:not(.gf_left_half):not(.gf_right_half):nth-child(3),
+.page-template-contactUsPage .gform_wrapper.gform_validation_error .gform_body ul li.gfield.gfield_error:not(.gf_left_half):not(.gf_right_half):nth-child(4){
+    max-width: 50% !important;
+}
+body .form-scale .gform_wrapper ul li.gfield{
+    margin-top: 15px;
+}
+@media only screen and (max-width: 761px), (max-device-width: 1023px) and (min-device-width: 768px){
+    .form-scale .gform_wrapper ul.gform_fields li.gfield.gfield_error + li.gfield.gfield_error {
+        margin-top: 15px;
     }
+}
 
+@media (max-width: 650px) {
     .page-template-contactUsPage .gform_fields .gfield:nth-child(1),
     .page-template-contactUsPage .gform_fields .gfield:nth-child(2),
     .page-template-contactUsPage .gform_wrapper.gform_validation_error .gform_body ul li.gfield.gfield_error:not(.gf_left_half):not(.gf_right_half):nth-child(1),
-    .page-template-contactUsPage .gform_wrapper.gform_validation_error .gform_body ul li.gfield.gfield_error:not(.gf_left_half):not(.gf_right_half):nth-child(2){
+    .page-template-contactUsPage .gform_wrapper.gform_validation_error .gform_body ul li.gfield.gfield_error:not(.gf_left_half):not(.gf_right_half):nth-child(2),
+    .page-template-contactUsPage .gform_wrapper.gform_validation_error .gform_body ul li.gfield.gfield_error:not(.gf_left_half):not(.gf_right_half):nth-child(3),
+    .page-template-contactUsPage .gform_wrapper.gform_validation_error .gform_body ul li.gfield.gfield_error:not(.gf_left_half):not(.gf_right_half):nth-child(4){
         max-width: 100% !important;
     }
 }
@@ -502,6 +504,40 @@ nav .header-nav__drop-nav {
     font-weight: 400;
     justify-content: center;
     align-items: center;
+    color: #002e5d;
+    border: 1px solid transparent;
+    transition: all .5s;
+}
+.page-numbers:hover{
+    border: 1px solid #002e5d;
+}
+.page-numbers.next, .page-numbers.prev{
+    display: inline-flex;
+    min-width: 27px;
+    min-height: 27px;
+    border-radius: 2px;
+    text-decoration: none;
+    background: #fff;
+    font-size: 20px;
+    font-weight: 400;
+    border: 1px solid #002e5d;
+    transition: all .5s;
+}
+.page-numbers.next path, .page-numbers.prev path{
+    stroke: #002e5d;
+}
+.page-numbers.prev{
+    margin-right: 30px;
+}
+.page-numbers.next{
+    margin-left: 30px;
+    transform: scale(-1);
+}
+.page-numbers.next:hover, .page-numbers.prev:hover{
+    background: #002e5d;
+}
+.page-numbers.next:hover path, .page-numbers.prev:hover path{
+    stroke: white;
 }
 .map {
     position: absolute;
@@ -509,7 +545,6 @@ nav .header-nav__drop-nav {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #ccc;
 }
 .map-wrap {
     width: 100%;
@@ -559,6 +594,32 @@ nav .header-nav__drop-nav {
 .page-template-contactUsPage .gform_fields .gfield:nth-child(3), .page-template-contactUsPage .gform_fields .gfield:nth-child(4) {
     max-width: 50%;
 }
+.form-scale .gform_wrapper li.gfield.gfield_error.gfield_contains_required{
+    padding-right: 15px;
+}
+@media (max-width: 650px) {
+    .form-scale .gform_wrapper li.gfield.gfield_error.gfield_contains_required,
+    .form-scale .gform_wrapper ul.gform_fields li.gfield{
+        padding-right: 0;
+    }
+    .page-template-contactUsPage  .gform_wrapper.gform_validation_error .top_label select.medium,
+    .page-template-contactUsPage .gform_fields .gfield:nth-child(3), .page-template-contactUsPage .gform_fields .gfield:nth-child(4) {
+        max-width: 100%;
+    }
+    .form-scale .gform_wrapper input:not([type='radio']):not([type='checkbox']):not([type='image']):not([type='file']){
+        line-height: 1.1;
+        min-height: 0;
+    }
+    .gform_wrapper .ginput_container span:not(.ginput_price){
+        margin-bottom: 0 !important;
+    }
+    .form-scale .gform_wrapper .gfield_chainedselect span{
+        width: 100%;
+        max-width: 100%;
+        padding: 0;
+        margin-bottom: 22px !important;
+    }
+}
 .page-id-493 div.ginput_container_name span {
     padding-right: 0px !important;
 }
@@ -575,4 +636,21 @@ nav .header-nav__drop-nav {
     letter-spacing: .43px;
     line-height: 1.1;
     color: #002e5d;
+}
+._underlined-link, .wpsl-directions{
+    color: #002e5d;
+    transition: all .5s;
+}
+._underlined-link:hover, .wpsl-directions:hover{
+    text-decoration: none;
+}
+.wpsl-custom-window{
+    margin-top: 5px;
+}
+.wpsl-directions{
+    margin-top: 5px;
+    display: inline-block;
+}
+.wpsl-info-title{
+    margin-bottom: 5px;
 }
