add bedding modal

--- a/web/app/themes/sleepmaker/static/src/sass/blocks/all.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/all.sass
@@ -2,7 +2,7 @@
 // @import root-app
 // @import block
 // @import content/all
-// @import modals/all
+@import modals/all
 
 @import button
 @import typography
