--- a/web/app/themes/sleepmaker/static/src/templates/blocks/modal/modal-ajax.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/blocks/modal/modal-ajax.pug
@@ -1,11 +1,38 @@
-.modal.is-hidden(id="modal-ajax" style="max-width:640px")
-	.modal__header
-		h4.modal__title Ajax
-
+.modal.is-hidden(id="modal-ajax" style="max-width:1160px")
 	.modal__body.js-ajax
-
-	.modal__footer
-		button.button.button--accent.button--right.js-modal-close
-			span.text Закрыть
-
+		.modal-content
+			h4.h1.modal-content__title Gel Infused Control Pillow
+			.modal-info
+				.modal-info__text
+					.content
+						h3 Characteristics
+						ul
+							li Gel infused memory foam to assist with temperature regulation
+							li Contoured to support your head, neck and shoulders
+							li Ventilated for enhanced airflow
+							li Versatile profile, medium feel
+						h3 Materials 
+						ul
+							li Filling: Polyurethane/Polyurethane Gel
+							li Inner cover: Cotton/Polyester
+							li Outer cover: Polyester
+							li Dimensions: 64x39cm
+						h3 Perfect For 
+						ul
+							li Temperature and head and neck support
+							li Hypoallergenic
+				.modal-info__img
+					img(src="/img/bedding/bedding-info.jpg", alt="bedding")
+		.modal-footer
+			.modal-footer__item 
+				a.modal-footer__link(href="#") Take the sleep quiz
+			.modal-footer__item 
+				a.modal-footer__link(href="#") Shop product now
 	button.modal-close-btn.js-modal-close ✕
+
+	
+
+
+
+
+
