--- a/web/app/themes/sleepmaker/static/src/templates/blocks/modal/modal-container.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/blocks/modal/modal-container.pug
@@ -1,6 +1,8 @@
 mixin modal-container(prprs = {})
 	.modal-container.is-hidden.js-modal-container&attributes(attributes)
-		include modal
-		include modal-success
-		include modal-ajax
+		//- include modal
+		//- include modal-success
+		//- include modal-ajax
+		include modal-html
+		
 		
