--- a/web/app/themes/sleepmaker/static/src/sass/blocks/modals/modal.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/modals/modal.sass
@@ -4,52 +4,16 @@
 	display: inline-block
 	width: 93%
 	max-width: 800px
-	margin: 2rem
+	margin: 3rem 2rem
 	vertical-align: middle
 	text-align: left
 	cursor: default
 	background: #FFFFFF
-	box-shadow: 0px 4px 20px rgba(57, 70, 138, 0.2)
-	border-radius: 4px
 	box-sizing: border-box
 	white-space: normal
-
-	+r(1024)
-		margin: 1rem
-
-		&__header
-			padding: 60px 80px 0
-
-		&__body
-			padding: 0 80px
-
-		&__footer
-			padding: 0 80px 60px
-
 	+r(768)
-		margin: 1rem
-
-		&__header
-			padding: 60px 60px 0
-
-		&__body
-			padding: 0 60px
-
-		&__footer
-			padding: 0 60px 60px
-
-
-	+r(480)
-		margin: 0.5rem
-
-		&__header
-			padding: 40px 30px 0
-
-		&__body
-			padding: 0 30px
-
-		&__footer
-			padding: 0 30px 40px
+		width: 95%
+		margin: 3rem 2%
 
 	&:not(.is-visible)
 		opacity: 0
@@ -70,42 +34,11 @@
 		left: 0
 		height: 0
 		visibility: hidden
-
-	&__title
-		width: 100%
-		display: block
-		padding: 0
-		margin: 0 0 2rem
-		font-family: Arial, Helvetica, sans-serif
-		font-size: 20px
-		text-transform: uppercase
-		font-weight: 500
-		line-height: 1.25rem
-		letter-spacing: -0.01em
-		color: $text-color
-
-	&__header
-		display: flex
-		flex-wrap: wrap
-		padding: 80px 112px 0
-
-	&__body
-		padding: 0 112px
-
-	&__footer
-		display: flex
-		flex-wrap: wrap
-		padding: 0 112px 80px
-
-	&__picture
-		display: block
-		height: auto
-		width: 100%
 		
 .modal-close-btn
 	position: absolute
-	top: 0
-	right: -46px
+	top: -5px
+	right: -35px
 	font-size: 30px
 	line-height: 30px
 	width: 30px
@@ -119,14 +52,119 @@
 			transform: rotate(0)
 
 	+r(1024)
-		color: lightgrey
-		top: 1rem
-		right: 1rem
+		top: -35px
+		right: -5px
 
+
+
+.modal-content
+	padding: 60px 60px 70px 80px
+	+r(1024)
+		padding: 50px 40px 60px 40px
 	+r(768)
-		top: 0.75rem
-		right: 0.75rem
+		padding: 35px 25px 45px 25px
+	&__title
+		font-size: 30px
+		margin-bottom: 40px
+		color: $main
+		font-weight: 500
+		font-family: $f1
+		letter-spacing: 2px
+		line-height: 1.1
+		text-transform: uppercase
+		+r(768)
+			margin-bottom: 25px
+	.content
+		max-width: 380px
+		ul:not([class])
+			margin-top: 10px
+			margin-bottom: 10px
+		h3
+			margin-top: 29px
+		& > *:first-child
+			margin-top: 0
+		ul:not([class]),
+		ol:not([class])
+			li + li
+				margin-top: 15px
 
-	+r(480)
-		top: 0.5rem
-		right: 0.5rem
+
+.modal-info
+	display: flex
+	flex-flow: row wrap
+	&__text
+		width: 48%
+		padding-right: 20px
+		+r(768)
+			width: 100%
+			order: 1
+	&__img
+		width: 52%
+		+r(768)
+			width: 100%
+			order: 0
+			margin-bottom: 30px
+
+.modal-info-img
+	width: 100%
+	max-width: 520px
+	position: relative
+	font-size: 0
+	+rm(769)
+		margin-top: 10px
+	&::before
+		content: ''
+		display: block
+		width: 100%
+		padding-bottom: 81.75%
+	img
+		position: absolute
+		top: 50%
+		left: 50%
+		transform: translate(-50%, -50%)
+		max-width: 100%
+		max-height: 100%
+		object-fit: cover
+.modal-footer
+	display: flex
+	flex-flow: row wrap
+	align-items: center
+	&__item
+		width: 25%
+		padding: 33px 25px
+		background: #002e5d
+		text-align: center
+		position: relative
+		flex-grow: 1
+		&:not(:last-child)
+			&::after
+				content: ''
+				display: block
+				width: 1px
+				height: 40px
+				background: $white
+				position: absolute
+				+rm(769)
+					right: 0
+					top: 50%
+					transform: translateY(-50%)
+				+r(768)
+					left: 0
+					bottom: 0
+					width: 100%
+					height: 1px
+					opacity: .5
+		+r(768)
+			width: 100%
+			padding: 25px
+	&__link
+		display: inline-block
+		color: $white
+		font-size: 20px
+		font-weight: 500
+		letter-spacing: 1px
+		line-height: 1.1
+		text-decoration: underline
+		letter-spacing: 0.43px
+		&:hover
+			text-decoration: none
