--- a/web/app/themes/sleepmaker/style.css
+++ b/web/app/themes/sleepmaker/style.css
@@ -666,4 +666,5 @@ nav .header-nav__drop-nav {
 .stuff-card{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
