--- a/web/app/themes/sleepmaker/static/src/sass/blocks/category-card/category-card.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/category-card/category-card.sass
@@ -41,3 +41,8 @@
     margin: 0 -2.4% -50px  -2.4%
     +r(768)
         margin: 0
+
+.flex-card
+    display: flex
+    flex-direction: column
+    justify-content: space-between
