--- a/web/app/themes/sleepmaker/static/src/sass/blocks/wide-decor/wide-decor.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/wide-decor/wide-decor.sass
@@ -37,6 +37,7 @@
             line-height: 0.88
             margin-bottom: 45px
             text-transform: none
+            margin-top: 15px
             +r(1024)
                 font-size: 50px
                 letter-spacing: 0.13px
