--- a/web/app/themes/sleepmaker/static/src/sass/blocks/long-card.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/long-card.sass
@@ -74,8 +74,9 @@
                 +rm(769)
                     display: block
             &.long-card-image-mobile
+                display: block
                 +rm(769)
-                display: none
+                    display: none
     &__info
         display: flex
         flex-flow: column nowrap
