find a store links

--- a/web/app/themes/sleepmaker/style.css
+++ b/web/app/themes/sleepmaker/style.css
@@ -671,3 +671,9 @@ nav .header-nav__drop-nav {
 .home-category-slider .swiper-container {
     overflow: hidden;
 }
+.shop-card__row {
+    justify-content: flex-start;
+}
+.shop-card__row-item {
+    margin-right: 15px;
+}
